--- a/ServerFlask/requirements.txt
+++ b/ServerFlask/requirements.txt
@@ -1,6 +1,14 @@
 flask
+flask-login
+requests
+joblib
 google-cloud-firestore
 google-cloud-storage
+google-cloud-pubsub
+google-auth
 scikit-learn
+schedule
+datetime
+json
 time
 os
